JS cleanup started and Uploader tweak (now with more "waiting" feebdack!)

--- a/static/index.html
+++ b/static/index.html
@@ -185,7 +185,7 @@
                     <div class="uploadBin"> <!-- Upload File -->
                         <h4>Got some Brain Data for the Brain Tree?</h4>
                         <input type="file" id="csvFile" accept=".csv">
-                        <h5 class="up3"onclick="uploadFile(event)">Click to convert a Session's Brainpower to Energy</h5>
+                        <h5 id="uploadButton" class="up3"onclick="uploadFile(event)">Click to convert a Session's Brainpower to Energy</h5>
                     </div>
                 </div>
             </div>
